# ling

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.ps1  install.sh
.github/workflows/: release.yml
crates/ling/: Cargo.toml
crates/ling-plugin-agent/: Cargo.toml
crates/ling-plugin-agent/src/: lib.rs
crates/ling-plugin-app/: Cargo.toml
crates/ling-plugin-app/src/: lib.rs
crates/ling-plugin-wiki/: Cargo.toml
crates/ling-plugin-wiki/src/: lib.rs
crates/ling/src/: api_key.rs  config.rs  main.rs  secret_prompt.rs  terminal.rs  update.rs  v1_api.rs
skills/ling/: SKILL.md
