[package]
name = "ling-plugin-agent"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
