[package]
name = "ling-plugin-wiki"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
