[package]
name = "ling"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
libc = "0.2"
ling-plugin-agent = { path = "../ling-plugin-agent" }
ling-plugin-app = { path = "../ling-plugin-app" }
ling-plugin-wiki = { path = "../ling-plugin-wiki" }
rpassword = "7.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }
